fixed border color change on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -218,7 +218,6 @@ ol {
     width: 15px;
     height: 15px;
     border-radius: 15px;
-    border: solid black;
     margin: 6px 0 6px 0;
   }
   .colorPosition {
@@ -226,10 +225,6 @@ ol {
     width: 25px;
     height: 25px;
     border-radius: 25px;
-    border: solid black;
     margin: 1px;
-  }
-  .test{
-    color: sienna
   }
 }
